@@ -1,4 +1,4 @@
-; $Id: ntdll.edf,v 1.81 2003/02/16 18:54:26 hbirr Exp $
+; $Id: ntdll.edf,v 1.82 2003/03/16 14:16:54 chorns Exp $
 ;
 ; ReactOS Operating System
 ;
@@ -302,6 +302,7 @@ RtlAreAnyAccessesGranted=RtlAreAnyAccessesGranted@8
 RtlAreBitsClear=RtlAreBitsClear@12
 RtlAreBitsSet=RtlAreBitsSet@12
 RtlAssert=RtlAssert@16
+RtlBaseProcessStartRoutine DATA
 ;RtlCaptureStackBackTrace
 RtlCharToInteger=RtlCharToInteger@12
 RtlCheckRegistryKey=RtlCheckRegistryKey@8
